// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus addAlert() 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-alert"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus addAlert() 2`] = `
<Alert
  className="uu5-bricks-alert-bus"
  closeTimer={3000}
  content="Obsah alertu"
  id="uuID01-alert"
  key="id_alert_bus"
  mainAttrs={Object {}}
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus addAlert() with header 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-alert"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus addAlert() with header 2`] = `
<Alert
  className="uu5-bricks-alert-bus"
  closeTimer={3000}
  colorSchema="yellow"
  content={
    <Strong
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      This is content in Bricks.Alert
    </Strong>
  }
  header={
    <Strong
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      Alert header
    </Strong>
  }
  id="uuID01-alert"
  key="ID_OF_ALERT"
  mainAttrs={Object {}}
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus addAlertToPosition() 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-alert"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus addAlertToPosition() 2`] = `
<Alert
  className="uu5-bricks-alert-bus"
  closeTimer={3000}
  content="Obsah alertu na první pozici"
  id="uuID01-alert"
  key="id_alert_in_busFIRST"
  mainAttrs={Object {}}
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus clearAlert() 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-alert"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus clearAlert() 2`] = `
<Alert
  className="uu5-bricks-alert-bus"
  closeTimer={3000}
  content="Obsah alertu"
  id="uuID01-alert"
  key="id_alert_bus"
  mainAttrs={Object {}}
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus clearAlert() 3`] = `
<Alert
  className="uu5-bricks-alert-bus"
  closeTimer={3000}
  content="Obsah alertu"
  hidden={true}
  id="uuID01-alert"
  key="id_alert_bus"
  mainAttrs={Object {}}
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus getAlerts() 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-alert"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus getAlerts() 2`] = `
<Alert
  className="uu5-bricks-alert-bus"
  closeTimer={3000}
  colorSchema="yellow"
  content={
    <Strong
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      This is content in Bricks.Alert
    </Strong>
  }
  id="uuID01-alert"
  key="ID_OF_ALERT"
  mainAttrs={Object {}}
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus getAlerts() 3`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-alert"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus removeAlert() 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-alert"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus removeAlert() 2`] = `
<Alert
  className="uu5-bricks-alert-bus"
  closeTimer={3000}
  colorSchema="yellow"
  content={
    <Strong
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      This is content in Bricks.Alert
    </Strong>
  }
  id="uuID01-alert"
  key="ID_OF_ALERT"
  mainAttrs={Object {}}
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus removeAlert() 3`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-alert"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus setAlert() 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-alert"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus setAlert() 2`] = `
<Alert
  className="uu5-bricks-alert-bus"
  closeTimer={3000}
  colorSchema="yellow"
  content={
    <Strong
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      This is content in Bricks.Alert
    </Strong>
  }
  id="uuID01-alert"
  key="ID_OF_ALERT"
  mainAttrs={Object {}}
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus setAlerts() 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-alert"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus setAlerts() 2`] = `
<Alert
  className="uu5-bricks-alert-bus"
  closeTimer={3000}
  content="Obsah alertu na druhé pozici"
  id="uuID01-alert"
  key="id_alert_in_busSECOND"
  mainAttrs={Object {}}
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus setAlerts() 3`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-alert"
  mainAttrs={Object {}}
/>
`;
